--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/http": "^7.2.16",
+    "@angular/material": "^14.0.5",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
